ASTRA: deterministic TRAIN/QC separation + qcDirectory + results/{training,qc}